  cs:number, and provide a freshly coded but simpler mechanism
  for guessing plurality of the elements on these items.

- Always suppress subsequent renderings of the locator
  variable when once rendered via cs:number, regardless
  of how it is handled internally.

- Always respect the outermost value of label-form applied
  to a macro via cs:text.

==========================
Changes in version 1.0.319
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Recognize an explicitly defined page-range-delimiter term.

==========================
Changes in version 1.0.318
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Enable code from previous checkin on makeCitationCluster()
  as well as processCitationCluster()

==========================
Changes in version 1.0.317
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Add the ability to extend the static statute locator
  through the normal item.locator to the 1.0.316 version
  checkin.

==========================
Changes in version 1.0.316
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Introduce new logic for bill and legislation items, controlled
  by the following toggle:

     citeproc.development_extensions.atomic_statutes = true;

  By default, this toggle is currently set to false, which disables
  the new behavior.

  If the toggle is set to true, locator terms in the CSL section field
  on bill and legislation items are rendered with locators parsed out
  of the field using the abbreviation conventions here (with the
  abbrev followed by a period in the field):

    https://bitbucket.org/fbennett/citeproc-js/src/9bfa1bbd729c/src/load.js#cl-539
